Extrusion reverts if shape key is present. #67098

Closed
opened 2019-07-17 03:10:13 +02:00 by Casey Frost · 13 comments

System Information
Operating system: Windows 10 Pro
Graphics card: RTX 2080 Ti + 3x 1080ti for rendering

Blender Version
Broken: RC1

Short description of error

As the title says, step by step directions to duplicate below

Exact steps for others to reproduce the error

Create a cube, and a couple shape keys and set them however you like. Observe them working.

Step1.gif

Now go into the base mesh, do an inset and an extrusion. tab out of edit mode and observe the extrusion snapping back to the surface. tab back into edit mode, grab the face and move it again, and this time it'll stay put. Observe everything working.

Step2.gif

*It doesn't need to be re-extruded, the extrusion is done, the face just needs to be relocated.

**System Information** Operating system: Windows 10 Pro Graphics card: RTX 2080 Ti + 3x 1080ti for rendering **Blender Version** Broken: RC1 **Short description of error** As the title says, step by step directions to duplicate below **Exact steps for others to reproduce the error** Create a cube, and a couple shape keys and set them however you like. Observe them working. ![Step1.gif](https://archive.blender.org/developer/F7613935/Step1.gif) Now go into the base mesh, do an inset and an extrusion. tab out of edit mode and observe the extrusion snapping back to the surface. tab back into edit mode, grab the face and move it again, and this time it'll stay put. Observe everything working. ![Step2.gif](https://archive.blender.org/developer/F7613953/Step2.gif) *It doesn't need to be re-extruded, the extrusion is done, the face just needs to be relocated.
Author

Added subscriber: @HardRooster

Added subscriber: @HardRooster

Added subscriber: @SpectreFirst

Added subscriber: @SpectreFirst

That issue is reproducible in 2.79 as well and it seems to be affecting all transform actions (move, rotate, scale) if you do Inset at any point during one Edit Mode session. If you do Inset first, tab out and then tab back in to Edit Mode, the same extrusion or other actions will stay where they are supposed to. Same thing happens both on Basis and other Shape Keys; you don’t have to create any Shape Keys at all, just add Basis and transformations will revert themselves even if you do Inset after other transform operation (for example Extrude, move some polygons around, Inset and exit Edit Mode).
Edit – same trick seems to be working with Bevel Edge and Bevel Vertex – if you move sub-objects around and do Bevel at some point, after you exit Edit Mode sub-objects will revert to their original positions. I’ve tried other modeling tools but so far I was able to find that only Inset and Bevel seems to be doing that.

That issue is reproducible in 2.79 as well and it seems to be affecting all transform actions (move, rotate, scale) if you do Inset at any point during one Edit Mode session. If you do Inset first, tab out and then tab back in to Edit Mode, the same extrusion or other actions will stay where they are supposed to. Same thing happens both on Basis and other Shape Keys; you don’t have to create any Shape Keys at all, just add Basis and transformations will revert themselves even if you do Inset after other transform operation (for example Extrude, move some polygons around, Inset and exit Edit Mode). Edit – same trick seems to be working with Bevel Edge and Bevel Vertex – if you move sub-objects around and do Bevel at some point, after you exit Edit Mode sub-objects will revert to their original positions. I’ve tried other modeling tools but so far I was able to find that only Inset and Bevel seems to be doing that.

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'

I have re-triaged this report and can not reproduce it.
Can you please check if this is still an issue in latest build?
https://builder.blender.org/download/

I have re-triaged this report and can not reproduce it. Can you please check if this is still an issue in latest build? https://builder.blender.org/download/
Author

I downloaded today's 2.82 beta and the 2.83 alpha and tried it on both. Same issue persists on both.

I downloaded today's 2.82 beta and the 2.83 alpha and tried it on both. Same issue persists on both.
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

#73612 seems highly related

#73612 seems highly related
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

I can confirm.

I can confirm.

This issue was referenced by 35861a49ee

This issue was referenced by 35861a49eef94dd9384d967ea1c92c87408a68d9

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-04-08 08:29:27 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67098
No description provided.