Fix T67098: Inset causes shape keys to reset exiting edit-mode

Edit-mesh interactive redo reset the meshes shape-key index.

Also copy the selection mode when copying meshes.